<resources>
    <string name="app_name">Din. Saúde</string>
    <string name="app_full_name_no_new_line">Onde está o dinheiro da Saúde?</string>
    <string name="app_full_name">Onde está \no dinheiro da Saúde?</string>
    <string name="app_idea">Conheça os investimentos federais, estaduais e municipais no orçamento da saúde pública e veja como o seu município tem aplicado esse recurso.</string>
    <string name="app_idea_short">Saiba como o governo tem investido o dinheiro destinado à saúde pública em sua cidade</string>
    <string name="money_default_value">R$ 0,00</string>
    <string name="money_format">R$ %1$.2f</string>
    <string name="money_format_str">R$ %1$s</string>
    <string name="value_format_mi">%1$s MI</string>
    <string name="value_format_bi">%1$s BI</string>
    <string name="value_format_tri">%1$s TRI</string>
    <string name="money_prefix">R$ </string>
    <string name="percentage_format">%1$.2f</string>
    <string name="msg_cannot_search_without_internet">Não é possível fazer uma pesquisa sem internet, mas se você tiver buscas no histórico ainda é possível visualizar os relatórios :)</string>
    <string name="lbl_non_informed">N/I</string>
    <string name="splash_label_start_btn">Clique aqui!</string>
    <string name="page_terms">Termos e Condições</string>
    <string name="txt_terms">Lorem ipsum dollor ....</string>
    <string name="menu_opt_search">Pesquisar</string>
    <string name="menu_opt_favorites_history">Histórico</string>
    <string name="menu_opt_compare">Comparar</string>
    <string name="menu_opt_about">Sobre</string>
    <string name="toolbar_label_field_city">Cidade: </string>
    <string name="toolbar_label_field_time_range">Período: </string>
    <string name="toolbar_label_back_btn">voltar</string>
    <string name="toolbar_search_input_default_title">Digite o nome da cidade</string>
    <string name="toolbar_search">Onde está o dinheiro da saúde?</string>
    <string name="dialog_search_label_header">Pesquisar</string>
    <string name="dialog_search_advanced_search_label">Pesquisa avançada</string>
    <string name="dialog_search_title">Nós podemos te dizer qual foi o investimento com saúde pública em qualquer cidade do <b>Brasil</b></string>
    <string name="dialog_search_label_location">Selecione uma <b>cidade</b></string>
    <string name="dialog_search_label_time">Selecione um <b>período</b></string>
    <string name="dialog_search_could_not_validate_search_params">Não foi possível validar os parâmetros da pesquisa, por favor se certifique de que todos os itens foram selecionados.</string>
    <string name="dialog_search_invalid_state_item">Por favor selecione um \"Estado\" para a pesquisa</string>
    <string name="dialog_search_invalid_year_item">Por favor selecione o \"Ano\" para a pesquisa</string>
    <string name="dialog_search_msg_problem_get_data_siops_try_again">Houve um erro ao obter algumas informações do SIOPS</string>
    <string name="dialog_search_msg_loading_info">Carregando informações …</string>
    <string name="dialog_search_msg_limit_stored_searches_exceeded">O número máximo de pesquisas armazenadas em seu dispositivo foi excedido, por isso esta busca não será armazenada.\n\nVocê pode aumentar o limite de itens armazenados na tela de configurações.</string>
    <string name="dialog_search_lbl_advanced_search">Busca avançada</string>
    <string name="dialog_search_hint_input_auto_complete_search">nome da cidade</string>
    <string name="dialog_search_msg_searching">Executando busca, por favor aguarde …</string>
    <string name="dialog_search_msg_advanced_search_failed">Não foi possível realizar a busca avançada, por favor selecione os campos de busca.</string>
    <string name="dashboard_page_title">Dashboard</string>
    <string name="dashboard_page_create_search_message"><b>Você acha que isso é muito?</b><small>\nEntão faça uma pesquisa, veja os resultados e reavalie sua opinião</small></string>
    <string name="dashboard_page_reference_information_source">As informações utilizadas nesta pesquisa foram retiradas do SIOPS, um sistema do governo federal onde todos os dados relativos à saúde pública devem ser declarados.\n\nO preenchimento dos dados do SIOPS se tornou uma obrigação legal das instituições públicas federais, municipais e estaduais, a partir da aprovação da Lei Complementar nº 141, de 13 de janeiro de 2012 (LC 141/2012).</string>
    <string name="dashboard_page_lbl_federal_government">Gov. Federal</string>
    <string name="dashboard_page_lbl_state_government">Gov. Estadual</string>
    <string name="dashboard_page_lbl_city_government">Gov. Municipal</string>
    <string name="dashboard_page_lbl_other_sources">Outras fontes</string>
    <string name="dashboard_could_not_share_search_verify_params">Não foi possível compartilhar os resultados desta busca, por favor tente mais tarde.</string>
    <string name="dashboard_page_msg_added_list_favorites">Esta pesquisa foi adicionada à lista de favoritos!</string>
    <string name="dashboard_page_msg_removed_list_favorites">Esta pesquisa foi removida de sua lista de favoritos!</string>
    <string name="dashboard_page_msg_added_list_shareable_items">Conteúdo adicionado à lista de itens para o compartilhamento</string>
    <string name="dashboard_page_lbl_investments_per_year">Abaixo estão os valores do investimento em saúde pública por pessoa x ano, no período pesquisado</string>
    <string name="dashboard_msg_could_not_load_indicators">Houve uma falha ao carregar os indicadores de saúde do município, alguns relatórios não serão exibidos.</string>
    <string name="dashboard_msg_could_not_load_ranking">Não foi possível carregar os dados do ranking dos municípios, este relatório não será exibido.</string>
    <string name="dashboard_msg_could_not_load_investments">Houve uma falha ao carregar os dados dos investimentos feitos no municípios, alguns relatórios não serão exibidos.</string>
    <string name="component_curiosity_about_ph_on_brazil_main_msg">Você já se perguntou qual \né o valor investido pelo \ngoverno em sua saúde?</string>
    <string name="component_curiosity_about_ph_on_brazil_make_search">Faça uma busca e \ndescubra em detalhes</string>
    <string name="component_curiosity_hint_search_input">Nome da cidade</string>
    <string name="component_investment_per_citizen_per_day_calculating">Calculando o valor disponível para um cidadão de %1$s para investimentos em saúde pública por dia …</string>
    <string name="component_investment_per_citizen_per_day_large_v"><![CDATA[<b>Este é o valor disponível por dia</b> para os investimentos em saúde pública de 1 habitante de %1$s]]></string>
    <string name="component_investment_per_citizen_per_day_small_v"><![CDATA[<b>Este é o valor disponível por dia</b> para os investimentos em saúde pública de 1 habitante de %1$s]]></string>
    <string name="component_investment_per_citizen_per_day_public_health_not_found">Não foi possível calcular o valor diário disponível para saúde pública de um cidadão do município selecionado.</string>
    <string name="component_city_investment_per_citizen_per_year_calculating">Calculando o valor disponível para um cidadão de %1$s para investimentos em saúde pública por ano …</string>
    <string name="component_city_investment_per_citizen_per_year"><![CDATA[O valor disponível por ano para os investimentos em saúde pública para 1 habitante de <b>%1$s</b>]]></string>
    <string name="component_city_investment_per_citizen_per_year_not_found">Não foi possível calcular o valor disponível por ano, para investimentos na saúde de 1 habitante da cidade pesquisada.</string>
    <string name="component_state_investment_per_citizen_per_year_calculating">Calculando o valor disponível para um cidadão do %1$s para investimentos em saúde pública por ano …</string>
    <string name="component_investment_own_city_value_per_citizen_per_year"><![CDATA[Do valor disponível por ano, este foi o valor investido pela <b>própria prefeitura</b>]]></string>
    <string name="component_state_investment_per_citizen_per_year_not_found">Não foi possível calcular o valor disponível por ano, para investimentos na saúde de 1 habitante do estado pesquisado.</string>
    <string name="component_federal_investment_per_citizen_per_year_calculating">Calculando o valor disponível para um cidadão do Brasil para investimentos em saúde pública por ano …</string>
    <string name="component_investment_other_sources_value_per_citizen_per_year"><![CDATA[Do valor disponível por ano, este foi o valor investido por <b>outras esferas do governo</b>]]></string>
    <string name="component_federal_investment_per_citizen_per_year_not_found">Não foi possível calcular o valor disponível por ano, para investimentos na saúde de uma pessoa no Brasil.</string>
    <string name="component_autonomy_index_title">Obrigações da prefeitura</string>
    <string name="component_federal_investment_public_health_main_lbl">Este foi o valor investido pelo governo federal em saúde pública em todo o Brasil no período pesquisado</string>
    <string name="component_other_sources_investment_public_health_city">Outras fontes</string>
    <string name="search_history_page_msg_do_search">Faça uma pesquisa</string>
    <string name="sharing_page_msg_no_search_selected">Esta funcionalidade só pode ser utilizada após a realização de uma pesquisa.</string>
    <string name="permissions_msg_need_permission_external_storage">Para que você possa utilizar esta funcionalidade, nós precisamos de sua permissão para criar e armazenar imagens em seu telefone</string>
    <string name="permissions_msg_grant_permission">Conceder permissão</string>
    <string name="settings_page_lbl_about_project">Sobre o projeto</string>
    <string name="settings_page_txt_about_project"><![CDATA[O objetivo deste app é empoderar o cidadão com informações sobre o orçamento da saúde pública do seu município, possibilitando a análise dos investimentos executados pela prefeitura de sua cidade, através de uma interface simples e acessível.]]></string>
    <string name="settings_page_lbl_about_siops_title">Sobre o SIOPS</string>
    <string name="settings_page_txt_about_siops">O Sistema De Informações Sobre Orçamentos Públicos Em Saúde - SIOPS, disponibiliza informações sobre o orçamento público de saúde do Brasil.</string>
    <string name="settings_page_lbl_about_fiocruz_description">Promover a saúde e o desenvolvimento social, gerar e difundir conhecimento científico e tecnológico, ser um agente da cidadania. Estes são os conceitos que pautam a atuação da Fundação Oswaldo Cruz (Fiocruz), vinculada ao Ministério da Saúde, a mais destacada instituição de ciência e tecnologia em saúde da América Latina.</string>
    <string name="settings_page_lbl_about_fiocruz_title">Sobre a Fiocruz</string>
    <string name="settings_page_lbl_know_more"><![CDATA[<b>Saiba mais</b>]]></string>
    <string name="settings_page_lbl_about_contact_title">Contato</string>
    <string name="settings_page_txt_about_contact"><![CDATA[<b>Entre em contato</b> para tirar qualquer dúvida ou reportar um bug encontrado]]></string>
    <string name="settings_page_lbl_about_credits_title">Créditos</string>
    <string name="settings_page_txt_about_credits"><![CDATA[<b>Saiba mais</b> sobre a equipe que desenvolveu este aplicativo]]></string>
    <string name="settings_page_lbl_btn_evaluate_app">Avalie o aplicativo</string>
    <string name="settings_page_lbl_btn_recommend_app">Indique para\num amigo</string>
    <string name="settings_page_app_version">Versão 1.0.0\nAtualizada em 27/07/2018</string>
    <string name="description_ico_sus_cross_white">ico sus cross white</string>
    <string name="description_ico_government_investment">ico government investment</string>
    <string name="description_ico_value_per_citizen_per_year">ico value per citizen x mYear</string>
    <string name="description_ico_sd_card">ico sd card</string>
</resources>