<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/component_federal_investment_public_health_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="horizontal"
    android:padding="15dp"
    android:visibility="gone">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/description_ico_government_investment"
        android:src="@drawable/ico_brazil_colorful" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/component_federal_investment_public_health_header_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/component_federal_investment_public_health_main_lbl"
            android:textColor="@color/color_black_3" />

        <TextView
            android:id="@+id/component_federal_investment_public_health_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/money_default_value"
            android:textColor="@color/color_green_blue_3"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>