<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/component_public_health_city_investment_per_citizen_per_year_container"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginEnd="15dp"
    android:weightSum="8"
    android:background="@color/color_white"
    tools:ignore="UseCompoundDrawables"
    android:visibility="gone">

    <ImageView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ico_city_colorful"
        android:contentDescription="@string/description_ico_value_per_citizen_per_year" />

    <TextView
        android:id="@+id/component_public_health_city_investment_per_citizen_per_year_header_msg"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="14sp"
        android:gravity="start"
        android:text="@string/component_city_investment_per_citizen_per_year"
        android:textColor="@color/color_black_3"/>

    <TextView
        android:id="@+id/component_public_health_city_investment_per_citizen_per_year_value"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@color/color_green_blue_3"
        android:textSize="20sp"
        android:text="@string/money_default_value"/>

</LinearLayout>