<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/component_msg_no_search_selected"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:visibility="gone">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/component_msg_no_search_selected_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:alpha="1"
            android:contentDescription="@string/description_ico_sus_cross_white"
            android:src="@drawable/ico_logo_brazil_sus_search_gray" />

        <TextView
            android:id="@+id/component_msg_no_search_selected_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.3"
            android:textSize="16sp"
            android:textColor="@color/color_black_3"
            android:text="@string/sharing_page_msg_no_search_selected"/>

        <Button
            android:id="@+id/component_msg_no_search_selected_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:paddingRight="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/background_rectangle_orange_rounded_borders"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:text="@string/search_history_page_msg_do_search"/>

    </LinearLayout>

</FrameLayout>