<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/component_other_sources_investment_public_health_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="0dp"
    android:paddingBottom="20dp"
    android:paddingStart="20dp"
    android:paddingLeft="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:background="@color/color_white"
    android:visibility="gone">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ico_city_investment_ph"
            android:contentDescription="@string/description_ico_government_investment" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/component_city_investment_public_health_header_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/component_other_sources_investment_public_health_city"
                android:textColor="@color/color_black_3"/>

            <TextView
                android:id="@+id/component_city_investment_public_health_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:textColor="@color/color_strong_green"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/money_default_value"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>